# entservices-screencapture

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  NOTICE  PRODUCT.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
.github/workflows/: L1-tests.yml  L2-tests.yml  native_full_build.yml
ScreenCapture/: ScreenCaptureImplementation.cpp
Tests/L1Tests/: CMakeLists.txt
Tests/L1Tests/tests/: test_ScreenCapture.cpp
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: ScreenCapture_L2Test.cpp
plugin/: CMakeLists.txt  ScreenCapture.conf.in  ScreenCapture.config  ScreenCapture.cpp  ScreenCapture.h  ScreenCaptureImplementation.cpp
plugin/Implementation/drm/: drmsc.cpp  drmsc.h  kms.cpp
